--- a/ui/dashboard.html
+++ b/ui/dashboard.html
@@ -53,15 +53,23 @@
           </ul>
          
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div  id="view" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
           <h2 class="sub-header">Statistical Summary</h2>
           <div class="table-responsive">
             
           </div>
         </div>
+		
+		<div id="signin">
+			
+		</div>
       </div>
     </div>
+	
+	 <script src="jQuery-2.1.4.min.js"></script>
+     <script src="js/bootstrap.min.js"></script>
+     <script src="app.js"></script>
 
  
   </body>
